c3p0-0.9.5-pre9
	-- In mchange-commons-java, modified log library to consider slf4j library unfound if it gets bound to its 
	   no-op ('NOP') back-end.
	-- Gave proxies a toString() method that embeds the toString() method of the objects they are wrapping, including
	   Statement text if the underlying driver supports that. Thanks to Ketan Padegaonkar for the suggestion.
	-- Added API [in mchange-commons-java] to make it easier for users to create a MultiPropertiesConfig object from a
	   Properties object, which will enable use of the new C3P0Config.refreshMainConfig( overrides, overridesDescription )
	   method, which may enable some useful dynamic configuarion possibilities, see e.g. https://sourceforge.net/p/c3p0/bugs/121/
	   Thanks to Vlad Skarzhevskyy on SourceForge for the proposed use case.
	-- Modified mchange-commons-java (and c3p0 docs) to prioritize slf4j over log4j if both are available in the application
	   classpath and com.mchange.v2.log.MLog has not been explicitly set. Thanks to Steve Ramage for the suggestion.
	-- If a problem occurs while acquiring a cached Statement from the Statement pool, the Exception we throw includes
	   both the actual problem (which occurs in a helper thread) and the stack trace of the client which provoked the
	   failed acquisition. The problem that occurred within the helper thread is captured as the root cause Throwable.
	   Many thanks to Michele Rossi for the suggestion.
	-- Finally wrapped StackOverflowError that comes in the rare, pathological case when every attempt to checkout
	   a resource fails some test or check until eventually recursive retries blow the stack. A NoGoodResourcesException
	   is now thrown in this case. Thanks to Ibenda on github for calling attention to the issue (and others annoyed by
	   it long ago). [Note: The StackOverflowError remains accessible, wrapped as the root cause Exception. So I expect